Adiciona o capítulo de Medidas de Posição e Dispersão

--- a/aluno.tex
+++ b/aluno.tex
@@ -16,9 +16,9 @@
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
 % \include{chapters/funcao-afim}
-\include{chapters/funcao-quadratica}
+% \include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
-% \include{chapters/estatistica2}
+\include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
@@ -36,6 +36,6 @@
 
 
 % \include{chapters/logaritmosMD_bibliografia}
-\renewcommand{\indexname}{Índice}
+% \renewcommand{\indexname}{Índice}
 \printindex
 \end{document}
