--- a/professor.tex
+++ b/professor.tex
@@ -15,10 +15,10 @@
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
-\include{chapters/funcao-afim}
+% \include{chapters/funcao-afim}
 % \include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
-% \include{chapters/estatistica2}
+\include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
@@ -39,7 +39,7 @@
 \def\currentcolor{cor1}
 \section{\huge Notas}
 \setlength{\columnsep}{1cm}
-\begin{multicols}{2}
+\begin{multicols}{2}\raggedcolumns
 \theendnotes
 \clearpage
 \end{multicols}
