Inclui o capítulo de Probabilidade
Atualização do material do aluno e inclusão da versão do professor.

--- a/aluno.tex
+++ b/aluno.tex
@@ -18,8 +18,8 @@
 % \include{chapters/funcao-afim}
 % \include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
-\include{chapters/estatistica2}
-% \include{chapters/probabilidade1}
+% \include{chapters/estatistica2}
+\include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
 % \include{chapters/semelhanca}
