Versão final do capítulo de educação financeira

--- a/aluno.tex
+++ b/aluno.tex
@@ -19,12 +19,12 @@
 % \include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
-\include{chapters/probabilidade1}
+% \include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
 % \include{chapters/semelhanca}
 % \include{chapters/trigonometria}
-% \include{chapters/financeira}
+\include{chapters/financeira}
 % \include{chapters/taxa}
 % \include{chapters/ladrilhos}
 % \include{chapters/cartografia}
