--- a/livroaberto-professor.sty
+++ b/livroaberto-professor.sty
@@ -29,7 +29,9 @@
 \RequirePackage{varwidth}
 \RequirePackage{array}
 \RequirePackage{colortbl}
+\RequirePackage{bookmark}
 \RequirePackage{hyperref}
+\PassOptionsToPackage{bookmarks=false}{hyperref}
 \hypersetup{colorlinks=true, colorlinks=true, linkcolor=linkscolor, filecolor=linkscolor, urlcolor=linkscolor,citecolor=linkscolor}
 \RequirePackage{float}
 \RequirePackage{tkz-euclide}
@@ -107,12 +109,21 @@ decorations.pathmorphing, graphs, quotes, angles, calc, through, backgrounds}
 \RequirePackage{marginfix}
 \RequirePackage{pdfpages}
 \RequirePackage{stmaryrd}
-% \RequirePackage{natbib}
+\RequirePackage{lscape}
+
+\RequirePackage[sectionbib]{natbib}
+\RequirePackage{chapterbib}
+\patchcmd{\thebibliography}{%
+  \chapter*{\bibname}\@mkboth{\MakeUppercase\bibname}{\MakeUppercase\bibname}}{%
+  \clearpage
+  \bibliographytitle*{Bibliografia}}{}{}
+
 \RequirePackage{spverbatim}
-\RequirePackage{ulem}
+% \RequirePackage{ulem}
 \RequirePackage{cancel}
 \RequirePackage{ifthen}
 \RequirePackage{booktabs}
+\RequirePackage{listofitems}
 \RequirePackage{url}
 \RequirePackage{graphicx}
 %\RequirePackage[usenames,dvipsnames]{color}
@@ -236,7 +247,7 @@ decorations.pathmorphing, graphs, quotes, angles, calc, through, backgrounds}
 
 
 
-\newtcolorbox[auto counter, number within=chapter, number freestyle={\noexpand\arabic{\tcbcounter}}]{task}[1]{parbox=false, blanker, enhanced, breakable, before skip = 5mm, after skip = 5mm, left=0.3mm, right=0.8mm, top=5mm, bottom=3mm, colback=white, colframe=cor2!70, width=162mm, 
+\newtcolorbox[auto counter, number within=chapter, number freestyle={\noexpand\arabic{\tcbcounter}}]{task}[1]{parbox=false, blanker, enhanced, breakable, before skip = 8mm, after skip = 5mm, left=0.3mm, right=0.8mm, top=5mm, bottom=3mm, colback=white, colframe=cor2!70, width=162mm, 
 %borderline west={3mm}{0pt}{white}, 
   toprule=0pt,
   bottomrule=0.5pt,
@@ -267,7 +278,7 @@ underlay boxed title ={
 
 % Makes the "To think about" box.
 % It is missing to set title font and font size. After that should check if the title is centralized in the title box.
-\newtcolorbox{reflection}{parbox=false, blanker, enhanced, breakable, before skip = 5mm, after skip = 5mm, left=3mm, right=3mm, top=6mm, bottom=3mm, colback=white, colframe=box1, borderline west={3mm}{0pt}{white}, toprule=1pt, bottomrule=1pt, rightrule=1pt, leftrule=-1pt, outer arc = 3mm, arc = 3mm, 
+\newtcolorbox{reflection}{parbox=false, blanker, enhanced, breakable, before skip = 5mm, after skip = 5mm, left=3mm, right=3mm, top=7mm, bottom=3mm, colback=white, colframe=box1, borderline west={3mm}{0pt}{white}, toprule=1pt, bottomrule=1pt, rightrule=1pt, leftrule=-1pt, outer arc = 3mm, arc = 3mm, 
 fonttitle=\bfseries\large\boxtitlefont,  % Should be 12 pt. Don't know how to set this.
 title=PARA REFLETIR, 
 boxed title style={empty,arc=0pt,outer arc=0pt,boxrule=0pt}, 
@@ -280,9 +291,11 @@ underlay boxed title={
 
 % Observation Box
 
+\newtcolorbox{observationtitle}[1]{
+parbox=false, enhanced, breakable, left=3mm, right=3mm,bottom=2mm, colback=box2!50, colframe=box2!50, arc=3mm, sharp corners=uphill, pad at break=2mm, drop fuzzy shadow, title={\bfseries\textcolor{\currentcolor}{ #1}}, boxed title style ={empty},top=8mm, attach boxed title to top center={xshift=0mm, yshift=-7.5mm}
+}
+
 \newtcolorbox{observation}[1]{parbox=false, enhanced, breakable, left=3mm, right=3mm, top=3mm, bottom=2mm, colback=box2!50, colframe=box2!50, arc=3mm, sharp corners=uphill, pad at break=2mm, drop fuzzy shadow, title={\bfseries\textcolor{\currentcolor}{ #1}}, attach boxed title to top center={xshift=0mm, yshift=-5.5mm}, boxed title style ={empty}}	 
-
-
 
 \newtcolorbox[auto counter, number within=chapter, number freestyle={\noexpand\arabic{\tcbcounter}}]{example}[1]{parbox=false, blanker, enhanced, breakable, before skip = 5mm, after skip = 5mm, left=3mm, right=3mm, top=10mm, bottom=3mm, colback=white, colframe=cor1, width=162mm, toprule=1pt, bottomrule=1pt, rightrule=1pt, leftrule=1pt, outer arc = 8mm, arc = 8mm, sharp corners = northwest, sharp corners = southeast, sharp corners = southwest,
 title={
@@ -591,78 +604,99 @@ underlay boxed title={
 \titleformat{\section}{\color{\currentcolor}\normalfont\Large\bfseries}{\thesection}{1em}{}
 \titlespacing*{\section}
 {0pt}{2mm}{1mm}
+% \providecommand*{\toclevel@section}{2}
+
 
 \titleformat{\subsection}{\vspace{.3\baselineskip}\color{\currentcolor}\normalfont\large\bfseries}{\thesubsection}{1em}{}
 \titlespacing*{\subsection}
 {0pt}{1mm}{1mm}
+\providecommand*{\toclevel@subsection}{3}
+\providecommand*{\toclevel@explore}{1}
 
+
+\titleformat{\bibliographytitle}{\vspace{.3\baselineskip}\color{\currentcolor}\normalfont\huge\bfseries}{\thesubsection}{1em}{}
+\titlespacing*{\subsection}
+{0pt}{1mm}{1mm}
 
 %Cor Explorando
 
-\titleclass{\scexplore}{straight}[\section]
-\titleformat{\scexplore}{\color{session1}\normalfont\Large\bfseries}{\thesection}{1em}{}
-\titlespacing*{\scexplore}
-{0pt}{2mm}{1mm}
-\providecommand*{\toclevel@scexplore}{0}
-
-\titleclass{\subexplore}{straight}[\subsection]
-\titleformat{\subexplore}{\vspace{.3\baselineskip}\color{session1}\normalfont\large\bfseries}{\thesubsection}{1em}{}
-\titlespacing*{\subexplore}
-{0pt}{1mm}{1mm}
-\providecommand*{\toclevel@subexplore}{0}
+\newcommand{\scexplore}[1]{\hypersetup{linkcolor=session1}\paragraph{\color{session1}\normalfont\Large\bfseries#1}\hypersetup{linkcolor=linkscolor}}
+\newcommand{\scarrange}[1]{\hypersetup{linkcolor=session4}\paragraph{\color{session4}\normalfont\Large\bfseries#1}\hypersetup{linkcolor=linkscolor}}
+\newcommand{\scpractice}[1]{\hypersetup{linkcolor=session2}\paragraph{\color{session2}\normalfont\Large\bfseries#1}\hypersetup{linkcolor=linkscolor}}
+\newcommand{\scknow}[1]{\hypersetup{linkcolor=session2}\paragraph{\color{session3}\normalfont\Large\bfseries#1}\hypersetup{linkcolor=linkscolor}}
+\newcommand{\scexercise}[1]{\hypersetup{linkcolor=cor1}\paragraph{\color{cor1}\normalfont\Large\bfseries#1}\hypersetup{linkcolor=linkscolor}}
 
 
-% %Cor Organizando
-\titleclass{\scarrange}{straight}[\section]
-\titleformat{\scarrange}{\color{session4}\normalfont\Large\bfseries}{\thesection}{1em}{}
-\titlespacing*{\scarrange}
-{0pt}{2mm}{1mm}
-\providecommand*{\toclevel@scarrange}{0}
+\newcommand{\subexplore}[1]{\paragraph{\color{session1}\normalfont\Large\bfseries#1}}
+\newcommand{\subarrange}[1]{\paragraph{\color{session4}\normalfont\Large\bfseries#1}}
+\newcommand{\subpractice}[1]{\paragraph{\color{session2}\normalfont\Large\bfseries#1}}
+\newcommand{\subknow}[1]{\paragraph{\color{session3}\normalfont\Large\bfseries#1}}
+\newcommand{\subexercise}[1]{\paragraph{\color{cor1}\normalfont\Large\bfseries#1}}
 
-\titleclass{\subarrange}{straight}[\subsection]
-\titleformat{\subarrange}{\vspace{.3\baselineskip}\color{session4}\normalfont\large\bfseries}{\thesubsection}{1em}{}
-\titlespacing*{\subarrange}
-{0pt}{1mm}{1mm}
-\providecommand*{\toclevel@subarrange}{0}
+% \newcommand{\scexplore}{straight}[\section]
+% \titleformat{\scexplore}{\color{session1}\normalfont\Large\bfseries}{\thesection}{1em}{}
+% \titlespacing*{\scexplore}
+% {0pt}{2mm}{1mm}
+% \providecommand*{\toclevel@scexplore}{2}
 
-%Cor Praticando
-\titleclass{\scpractice}{straight}[\section]
-\titleformat{\scpractice}{\color{session2}\normalfont\Large\bfseries}{\thesection}{1em}{}
-\titlespacing*{\scpractice}
-{0pt}{2mm}{1mm}
-\providecommand*{\toclevel@scpractice}{0}
+% \titleclass{\subexplore}{straight}[\subsection]
+% \titleformat{\subexplore}{\vspace{.3\baselineskip}\color{session1}\normalfont\large\bfseries}{\thesubsection}{1em}{}
+% \titlespacing*{\subexplore}
+% {0pt}{1mm}{1mm}
+% \providecommand*{\toclevel@subexplore}{3}
 
-\titleclass{\subpractice}{straight}[\subsection]
-\titleformat{\subpractice}{\vspace{.3\baselineskip}\color{session2}\normalfont\large\bfseries}{\thesubsection}{1em}{}
-\titlespacing*{\subpractice}
-{0pt}{1mm}{1mm}
-\providecommand*{\toclevel@subpractice}{0}
 
-%Cor Para Saber Mais
-\titleclass{\scknow}{straight}[\section]
-\titleformat{\scknow}{\color{session3}\normalfont\Large\bfseries}{\thesection}{1em}{}
-\titlespacing*{\scknow}
-{0pt}{2mm}{1mm}
-\providecommand*{\toclevel@scknow}{0}
+% % %Cor Organizando
+% \titleclass{\scarrange}{straight}[\section]
+% \titleformat{\scarrange}{\color{session4}\normalfont\Large\bfseries}{\thesection}{1em}{}
+% \titlespacing*{\scarrange}
+% {0pt}{2mm}{1mm}
+% \providecommand*{\toclevel@scarrange}{2}
 
-\titleclass{\subknow}{straight}[\subsection]
-\titleformat{\subknow}{\vspace{.3\baselineskip}\color{session3}\normalfont\large\bfseries}{\thesubsection}{1em}{}
-\titlespacing*{\subknow}
-{0pt}{1mm}{1mm}
-\providecommand*{\toclevel@subknow}{0}
+% \titleclass{\subarrange}{straight}[\subsection]
+% \titleformat{\subarrange}{\vspace{.3\baselineskip}\color{session4}\normalfont\large\bfseries}{\thesubsection}{1em}{}
+% \titlespacing*{\subarrange}
+% {0pt}{1mm}{1mm}
+% \providecommand*{\toclevel@subarrange}{3}
 
-%Cor Exercícios
-\titleclass{\scexercise}{straight}[\section]
-\titleformat{\scexercise}{\color{cor1}\normalfont\Large\bfseries}{\thesection}{1em}{}
-\titlespacing*{\scexercise}
-{0pt}{2mm}{1mm}
-\providecommand*{\toclevel@scexercise}{0}
+% %Cor Praticando
+% \titleclass{\scpractice}{straight}[\section]
+% \titleformat{\scpractice}{\color{session2}\normalfont\Large\bfseries}{\thesection}{1em}{}
+% \titlespacing*{\scpractice}
+% {0pt}{2mm}{1mm}
+% \providecommand*{\toclevel@scpractice}{2}
 
-\titleclass{\subexercise}{straight}[\subsection]
-\titleformat{\subexercise}{\vspace{.3\baselineskip}\color{cor1}\normalfont\large\bfseries}{\thesubsection}{1em}{}
-\titlespacing*{\subexercise}
-{0pt}{1mm}{1mm}
-\providecommand*{\toclevel@subexercise}{0}
+% \titleclass{\subpractice}{straight}[\subsection]
+% \titleformat{\subpractice}{\vspace{.3\baselineskip}\color{session2}\normalfont\large\bfseries}{\thesubsection}{1em}{}
+% \titlespacing*{\subpractice}
+% {0pt}{1mm}{1mm}
+% \providecommand*{\toclevel@subpractice}{3}
+
+% %Cor Para Saber Mais
+% \titleclass{\scknow}{straight}[\section]
+% \titleformat{\scknow}{\color{session3}\normalfont\Large\bfseries}{\thesection}{1em}{}
+% \titlespacing*{\scknow}
+% {0pt}{2mm}{1mm}
+% \providecommand*{\toclevel@scknow}{2}
+
+% \titleclass{\subknow}{straight}[\subsection]
+% \titleformat{\subknow}{\vspace{.3\baselineskip}\color{session3}\normalfont\large\bfseries}{\thesubsection}{1em}{}
+% \titlespacing*{\subknow}
+% {0pt}{1mm}{1mm}
+% \providecommand*{\toclevel@subknow}{3}
+
+% %Cor Exercícios
+% \titleclass{\scexercise}{straight}[\section]
+% \titleformat{\scexercise}{\color{cor1}\normalfont\Large\bfseries}{\thesection}{1em}{}
+% \titlespacing*{\scexercise}
+% {0pt}{2mm}{1mm}
+% \providecommand*{\toclevel@scexercise}{2}
+
+% \titleclass{\subexercise}{straight}[\subsection]
+% \titleformat{\subexercise}{\vspace{.3\baselineskip}\color{cor1}\normalfont\large\bfseries}{\thesubsection}{1em}{}
+% \titlespacing*{\subexercise}
+% {0pt}{1mm}{1mm}
+% \providecommand*{\toclevel@subexercise}{3}
 
 % Create box shape
 \pgfdeclareshape{howbecausetextbox}{%
@@ -992,7 +1026,7 @@ underlay boxed title={
         \setlist[enumerate]{label=\protect\bfseries\textcolor{\currentcolor}{\alph*)}}
 	% choose secondary (depth 2) enumerate style..
 	\setlist[enumerate,2]{label=\protect\bfseries\textcolor{\currentcolor}{\roman*)},ref=\protect\bfseries\textcolor{\currentcolor}{\alph*)}} 
-
+	\pdfbookmark[explore]{Explorando: #1}{#1}
     
 }
 
@@ -1636,16 +1670,26 @@ texpreamble("\usepackage{fontspec}\setmainfont{Exo2-Light}");
 
 %%%%%%%%%%%%%%%%  PÁGINA DE TEXTO
 
+\newcounter{mypresentation}
+\setcounter{mypresentation}{0}
+
 \newenvironment{apresentacao}
-{\frontmatter\def\currentcolor{cor1}
+{\setcounter{mypresentation}{\value{page}}
+\frontmatter
+\setcounter{mypresentation}{\value{page}}
+\def\currentcolor{cor1}
 \newgeometry{textwidth=840pt,outer=50pt, bottom=45pt, top=46pt}
 \pagestyle{plain}
 \setlist[enumerate]{wide, label=\titem{\alph*)},itemsep=0pt,topsep=2.5pt}
-\setlist[itemize]{wide} 
-\begin{multicols}{3}}
+\setlist[itemize]{wide, label=\textcolor{\currentcolor}{\small$\blacksquare$}, topsep=5pt} 
+\begin{multicols}{2}}
 {\clearpage\end{multicols}
 \pagebreak\restoregeometry 
-\mainmatter\def\currentcolor{session1}}
+\mainmatter
+\def\currentcolor{session1}
+\cleardoublepage
+\setcounter{page}{\value{mypresentation}}
+}
 
 \newcounter{mypagecount}
 \setcounter{mypagecount}{0}
@@ -1661,13 +1705,16 @@ texpreamble("\usepackage{fontspec}\setmainfont{Exo2-Light}");
   \cleardoublepage
   \@mainmattertrue
   %\pagenumbering{arabic}% Don't reset
-}\clearpage\setcounter{mypagecount}{\value{page}}
-\cleardoublepage\setcounter{mypagecount}{\value{page}}\def\currentcolor{session1}
+}\clearpage
+\setcounter{mypagecount}{\value{page}}
+\cleardoublepage
+\setcounter{mypagecount}{\value{page}}
+\def\currentcolor{session1}
 \newgeometry{textwidth=840pt,outer=50pt, bottom=45pt, top=46pt}
 \thispagestyle{empty}\pagestyle{empty}
 \setlist[enumerate]{wide, label=\titem{\alph*)},itemsep=0pt,topsep=2.5pt}
-\setlist[itemize]{wide}
-\begin{multicols}{3}}
+\setlist[itemize]{wide, label=\textcolor{\currentcolor}{\small$\blacksquare$}, topsep=5pt}
+\begin{multicols}{2}}
 {\clearpage\end{multicols}\def\currentcolor{session1}\pagebreak\restoregeometry\cleardoublepage\setcounter{page}{\value{mypagecount}}
 }
 
@@ -2037,6 +2084,7 @@ before upper={ \setlength{\parskip}{6pt}\setlist[enumerate]{label=wide,left=0pt,
 \fi
 }
 
+
 \newcommand\notas[1]{
 	\notebox{\textcolor{white}{\textbf{\endnotemark}}}
 	\endnotetext
@@ -2046,6 +2094,20 @@ before upper={ \setlength{\parskip}{6pt}\setlist[enumerate]{label=wide,left=0pt,
 	\notebox{\textcolor{white}{\textbf{\endnotemark}}}
 	\endnotetext
 	{#1}}}
+
+
+\newcommand\notasfinais{	
+	\newgeometry{textwidth=840pt,outer=50pt, top=2cm}
+	\pagestyle{plain}
+	\def\currentcolor{cor1}
+	\section{\huge Notas}
+	\setlength{\columnsep}{1cm}
+	\begin{multicols}{2}\raggedcolumns
+	\theendnotes
+	\clearpage
+	\end{multicols}
+	\restoregeometry
+}
 
 %%%%%%%%%%%%% CAIXA DE HABILIDADES
 \newtcolorbox{habilities}[1]{ breakable,colback=penaqua!20!white,colbacktitle=penaqua!20!white,
@@ -2062,6 +2124,8 @@ colframe=grafite!90!white,colupper=white, left=0pt, right=0pt,top=-2pt,bottom=-2
 \geometry{reset, paperwidth=950pt,paperheight=782pt,textwidth=450pt,
 marginparsep=30pt,headsep=19pt,top=45pt,inner=50pt,outer=440pt,
 marginparwidth=350pt,textheight=686pt}
+
+
 
 
 
