--- a/professor.tex
+++ b/professor.tex
@@ -9,9 +9,10 @@
 % \include{capa-funcoes}
 % \setcounter{chapter}{1}
 % \include{capa-afim}
+% 
 % \setcounter{chapter}{2}
 % \include{capa-quadraticas}
-% \include{chapters/vetores-novo1}         
+% \include{chapters/vetores-novo1}        
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
@@ -19,30 +20,30 @@
 % \include{chapters/funcao-quadratica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
-\include{chapters/probabilidade1}
+% \include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
 % \include{chapters/semelhanca}
 % \include{chapters/trigonometria}
-% \include{chapters/financeira}
+\include{chapters/financeira}
 % \include{chapters/taxa}
 % \include{chapters/ladrilhos}
 % \include{chapters/cartografia}
-
 % \include{chapters/investigacao}
 % \include{chapters/exponencial}
 % \include{chapters/superficie}
 % \include{chapters/logaritmos}
+ 
 
-\newgeometry{textwidth=840pt,outer=50pt, top=2cm}
-\pagestyle{plain}
-\def\currentcolor{cor1}
-\section{\huge Notas}
-\setlength{\columnsep}{1cm}
-\begin{multicols}{2}\raggedcolumns
-\theendnotes
-\clearpage
-\end{multicols}
+% \newgeometry{textwidth=840pt,outer=50pt, top=2cm}
+% \pagestyle{plain}
+% \def\currentcolor{cor1}
+% \section{\huge Notas}
+% \setlength{\columnsep}{1cm}
+% \begin{multicols}{2}\raggedcolumns
+% \theendnotes
+% \clearpage
+% \end{multicols}
 
 % \include{bibliografia/cartografia_bibliografia}
 % \include{bibliografia/logaritmos_bibliografia}
