Adiciona o capítulo de Funções Trigonométricas
Aluno e professor. Alterações também nos capítulos de Taxa de Variação, Introdução às Funções, Logaritmos, Função Exponencial e Função Afim. Há também pequenas correções no capítulo de Educação financeira.

--- a/Bibliografia/funcao-afim_bibliografia.bib
+++ b/Bibliografia/funcao-afim_bibliografia.bib
@@ -10,8 +10,8 @@ publisher = {Informa},
 address = {Londres, Reino Unido}
 }
 
-@book{Lima-2006,
-  author    = {Elon Lages Lima}, 
+@book{Lima2006,
+  author    = {Elon Lages Lima and Paulo Cezar Pinto Carvalho and Eduardo Wagner and Augusto César Morgado}, 
   title     = {A Matemática do Ensino Médio},
   publisher = {Sociedade Brasileira de Matemática},
   year      = {2006},
