--- a/Bibliografia/trigonometrica_bibliografia.bib
+++ b/Bibliografia/trigonometrica_bibliografia.bib
@@ -25,6 +25,15 @@ address = {Brasília, Brasil},
    
 }
 
+@mastersthesis{ignacio2002,
+  author       = {Rogério da Silva Ignácio}, 
+  title        = {Concepções sobre periodicidade em atividades de modelagem},
+  school       = {Universidade Federal de Pernambuco},
+  year         = {2002},
+  address      = {Pernambuco, Brasil},
+   
+}
+
 
 @phdthesis{ekici2010,
   author       = {Celil Ekici}, 
@@ -96,7 +105,7 @@ address = {Brasília, Brasil},
   publisher    = {Universidade de Campinas},
   }
 
-  @article{keith2005,
+  @article{weber2005,
 author = {Weber, Keith},
 year = {2005},
 month = {10},
@@ -106,4 +115,16 @@ volume = {17},
 journal = {Mathematics Education Research Journal},
 publisher={National Council of Teachers of Mathematics},
 address={Virgínia, Estados Unidos}
+}
+
+@book{Lima2006,
+  author    = {Elon Lages Lima and Paulo Cezar Pinto Carvalho and Eduardo Wagner and Augusto César Morgado}, 
+  title     = {A Matemática do Ensino Médio},
+  publisher = {Sociedade Brasileira de Matemática},
+  year      = {2006},
+  volume    = {1},
+  series    = {10},
+  address   = {Rio de Janeiro, Brasil},
+  edition   = {9},
+  isbn      = {3257227892}
 }
