--- a/aluno.tex
+++ b/aluno.tex
@@ -15,25 +15,24 @@
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
+% \include{chapters/taxa}
 % \include{chapters/funcao-afim}
 % \include{chapters/funcao-quadratica}
+% \include{chapters/sistemas}
+% \include{chapters/exponencial}
+% \include{chapters/logaritmos}
+% \include{chapters/trigonometrica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
 % \include{chapters/semelhanca}
-% \include{chapters/trigonometria}
-% \include{chapters/financeira}
-% \include{chapters/taxa}
+\include{chapters/financeira}
 % \include{chapters/ladrilhos}
 % \include{chapters/cartografia}
 % \include{chapters/investigacao}
-% \include{chapters/funcao-exponencial}
 % \include{chapters/superficie}
-% \include{chapters/logaritmos}
-% \include{chapters/livroaberto}
-\include{chapters/trigonometrica}
 
 
 % \include{chapters/logaritmosMD_bibliografia}
