--- a/livroaberto-professor.sty
+++ b/livroaberto-professor.sty
@@ -30,6 +30,7 @@
 \RequirePackage{array}
 \RequirePackage{colortbl}
 \RequirePackage{bookmark}
+\RequirePackage[math]{cellspace}
 \RequirePackage{hyperref}
 \PassOptionsToPackage{}{hyperref}
 \hypersetup{colorlinks=true, colorlinks=true, linkcolor=linkscolor, filecolor=linkscolor, urlcolor=linkscolor,citecolor=linkscolor}
@@ -198,6 +199,27 @@ decorations.pathmorphing, graphs, quotes, angles, calc, through, backgrounds}
 \newcolumntype{e}[1]{>{\vspace{2.5pt}\centering}m{#1}<{\vspace{2.5pt}}}
 \newcolumntype{f}{>$c<$}
 
+
+% Prevent a clash with tabu, or other packages that also define \extrarowdepth.
+\AtBeginDocument{%
+  \ifdefdimen\extrarowdepth{} % \extrarowdepth already defined as a length
+  {\ifdef\extrarowdepth % if it is defined but not a length, we have an error
+    {\PackageError{extrarowdepth}{Cannot define length \string\extrarowdepth}
+      {There is already a \string\extrarowdepth\space and it is not a length parameter.}}
+    {\newlength\extrarowdepth\setlength\extrarowdepth{0pt}}}%
+  \newlength\@temprowdepth}
+
+
+\patchcmd{\@array}{\setbox \@arstrutbox \hbox{\vrule \@height \arraystretch \@tempdima \@depth \arraystretch \dp \strutbox \@width \z@}}
+{\@temprowdepth  \dp \strutbox \advance \@temprowdepth by\extrarowdepth \setbox \@arstrutbox \hbox{\vrule \@height \arraystretch \@tempdima \@depth \arraystretch \@temprowdepth \@width \z@}}
+{\PackageInfo{extrarowdepth}{\string\extrarowdepth\space added to the array package}}
+{\PackageWarning{extrarowdepth}{Failed to include \string\extrarowdepth\space in the array package}}
+\let\@@array\@array
+
+\newcommand{\tablinesep}[1]{
+  \setlength\extrarowheigth{#1}
+  \setlength\extrarowdepth{#1}
+}
 
 %Coloca listas de enumerate no padrão da seção de exercícios
 \newcommand\exerciselist
@@ -614,7 +636,7 @@ underlay boxed title={
 
 % Formatação dos comandos \section e \subsection
 %Cor atual
-\titleformat{\section}{\color{\currentcolor}\normalfont\semihuge\bfseries}{\thesection}{1em}{\phantomsection #1}
+\titleformat{\section}{\color{\currentcolor}\normalfont\semihuge\bfseries}{\thesection}{1em}{#1 \phantomsection}
 \titlespacing*{\section}
 {0pt}{2mm}{1mm}
 % \providecommand*{\toclevel@section}{2}
@@ -2226,6 +2248,7 @@ before upper={ \setlength{\parskip}{6pt}\setlist[enumerate]{label=wide,left=0pt,
 
 
 \newcommand\notas[1]{
+	\setcounter{Hendnote}{0}
 	\notebox{\textcolor{white}{\textbf{\endnotemark}}}
 	\endnotetext
 	{#1}}
