--- a/professor.tex
+++ b/professor.tex
@@ -9,31 +9,31 @@
 % \include{capa-funcoes}
 % \setcounter{chapter}{1}
 % \include{capa-afim}
-% 
 % \setcounter{chapter}{2}
 % \include{capa-quadraticas}
 % \include{chapters/vetores-novo1}        
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
 % \include{chapters/funcoes}
-% \include{chapters/funcao-afim}
+% \include{chapters/taxa}
+\include{chapters/funcao-afim}
 % \include{chapters/funcao-quadratica}
+% \include{chapters/sistemas}
+% \include{chapters/exponencial}
+% \include{chapters/logaritmos}
+% \include{chapters/trigonometrica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
 % \include{chapters/medidas}
 % \include{chapters/tales}
 % \include{chapters/semelhanca}
-% \include{chapters/trigonometria}
 % \include{chapters/financeira}
-% \include{chapters/taxa}
 % \include{chapters/ladrilhos}
 % \include{chapters/cartografia}
 % \include{chapters/investigacao}
-% \include{chapters/exponencial}
 % \include{chapters/superficie}
-\include{chapters/logaritmos}
-% \include{chapters/trigonometrica}
+
 
 % \newgeometry{textwidth=840pt,outer=50pt, top=2cm}
 % \pagestyle{plain}
