Adição dos capítulos de Trigonometria e de Análise Combinatória
Também pequenas correções nos capítulos de Funções

--- a/Bibliografia/combinatoria_bibliografia.bib
+++ b/Bibliografia/combinatoria_bibliografia.bib
@@ -38,7 +38,7 @@
 }
 
 @article{Elisete,
-	author = {Elise de Melo Borba Ferreira},
+	author = {Elise {de Melo Borba} Ferreira},
 	title = {Sistema Braille simbologia básica aplicada à Língua Portuguesa},
 	journal = {Coleção Caminhos e Saberes},
 	year = {2016},
@@ -48,7 +48,7 @@
 }
 
 @conference{Renan,
-	author = {José Luiz Magalhãe Freitas and Renan Gustavo Araújo Lima},
+	author = {José Luiz Magalhães Freitas and Renan Gustavo Araújo Lima},
 	title = {Um estudo inicial de estratégias e dificuldades apresentadas pelos alunos, diante de problemas de análise combinatória},
 	booktitle={Anais do VIII Seminário Sul-Mato-Grossense de Pesquisa em Educação Matemática},
 	year = {2014},
@@ -97,7 +97,7 @@
 }
 
 @book{Morgado,
-	author = {Augusto César de Oliveira Morgado and João Bosco Pitombeira Carvalho and Paulo César Pinto Carvalho and Pedro Fernandez},
+	author = {Augusto César {de Oliveira} Morgado and João Bosco Pitombeira Carvalho and Paulo César Pinto Carvalho and Pedro Fernandez},
 	title = {Análise Combinatória e Probabilidade},
 	year = {1991},
 	publisher = {Editora Própria},
@@ -106,7 +106,7 @@
 }
 
 @phdthesis{Cristiane,
-	author = {Cristiane Azevedo dos Santos},
+	author = {Cristiane Azevedo {dos Santos} Pessoa},
 	title = {Quem dança com quem: o desenvolvimento do raciocínio combinatório do 2\super{o} ano do Ensino Fundamental ao 3\super{o} ano do Ensino Médio.},
 	year = {2009},
 	school = {Universidade Federal do Pernambuco (UFP)},
@@ -122,7 +122,7 @@
 }
 
 @mastersthesis{Souza,
-	author = {Analucia Castro Pimenta de Souza},
+	author = {Analucia Castro Pimenta {de} Souza},
 	title = {Análise Combinatória apoiada na Metodologia de Ensino Aprendizagem - Avaliação de Matemática através da resolução de problemas},
 	school = {Universidade Estadual Paulista "Júlio de Mesquita Filho" (UNESP)},
 	year = {2008},
