--- a/Bibliografia/funcao-afim_bibliografia.bib
+++ b/Bibliografia/funcao-afim_bibliografia.bib
@@ -34,7 +34,7 @@ address={Rio de Janeiro, Brasil}
 
 @article{Stump-1999,
   title={Secondary mathematics teachers’ knowledge of slope},
-  author={Stump, Sheryl},
+  author={Sheryl Stump},
   journal={Mathematics Education Research Journal},
   volume={11},
   number={2},
