--- a/aluno.tex
+++ b/aluno.tex
@@ -15,14 +15,14 @@
 % \include{chapters/vetores-novo1}         
 % \include{chapters/perspectiva1} 
 % \include{chapters/perspectiva2}
-% \include{chapters/funcoes}
-% \include{chapters/taxa}
-% \include{chapters/funcao-afim}
-% \include{chapters/funcao-quadratica}
-% \include{chapters/sistemas}
-% \include{chapters/exponencial}
-% \include{chapters/logaritmos}
-% \include{chapters/funcao-trigonometrica}
+\include{chapters/funcoes}
+\include{chapters/taxa}
+\include{chapters/funcao-afim}
+\include{chapters/funcao-quadratica}
+\include{chapters/sistemas}
+\include{chapters/exponencial}
+\include{chapters/logaritmos}
+\include{chapters/funcao-trigonometrica}
 % \include{chapters/estatistica1}
 % \include{chapters/estatistica2}
 % \include{chapters/probabilidade1}
@@ -35,7 +35,7 @@
 % \include{chapters/investigacao}
 % \include{chapters/superficie}
 % \include{chapters/trigonometria}
-\include{chapters/combinatoria}
+% \include{chapters/combinatoria}
 
 % \include{chapters/logaritmosMD_bibliografia}
 % \renewcommand{\indexname}{Índice}
